****************************************************************************


QtCore
-----

QtGui
-----

QtWidgets
---------

QtNetwork
---------

QtDBus
------

QtConcurrent
------------

QtOpenGL
--------

QtScript
--------

QTestLib
--------

QtSql
-----

****************************************************************************
*                          Database Drivers                                *
****************************************************************************

sqlite
------

postgres
--------

****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------

Qt for Windows
--------------

Qt for Mac OS X
---------------

Qt for Embedded Linux
---------------------

Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************

 - MinGW: Statically link runtime libraries into qmake

****************************************************************************
*                          Tools                                           *
****************************************************************************


****************************************************************************
*                          Plugins                                         *
****************************************************************************


****************************************************************************
*                   Important Behavior Changes                             *
****************************************************************************
